fixed messenger header text overflow and other new message styling

--- a/app/styles/component_project-messenger.scss
+++ b/app/styles/component_project-messenger.scss
@@ -16,7 +16,6 @@
   background-color: rgba(255,255,255,1);
   .header {
     height: 50px;
-    padding: 10px;
     text-align: center;
     border-bottom: 1px solid #fff;
     color: #fefefe;
@@ -68,6 +67,12 @@
     }
     h3 {
       height: 100%;
+      width: calc(100% - 110px);
+      padding-top: 11px;
+      margin-left: 55px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
     h3:hover {
       cursor: pointer;
@@ -77,8 +82,8 @@
     height: calc(100% - 50px);
     overflow: hidden;
     width: 100%;
-    border-left: 1px solid rgba(0, 136, 255, 0.8);
-    border-right: 1px solid rgba(0, 136, 255, 0.8);;
+    // border-left: 1px solid rgba(0, 136, 255, 0.8);
+    // border-right: 1px solid rgba(0, 136, 255, 0.8);;
     .body-inner-wrapper {
       width: 200%;
       height: 100%;
@@ -137,9 +142,12 @@
       width: 100%;
     }
     .newThread {
-      border-left: 1px solid rgba(0, 136, 255, 0.8);
       position: absolute;
       transition: all .3s;
+      height: calc(100% - 55px);
+      form {
+        height: 100%;
+      }
 
       input[type="text"] {
         border-top: none;
@@ -147,27 +155,34 @@
         border-right: none;
         border-bottom: 1px solid rgba(0, 136, 255, 0.3);
         width: 100%;
-        font-size: 16px;
+        font-size: 14px;
         color: rgba(0,100,0,.7);
         padding: 10px;
         box-sizing: border-box;
         float: left;
         height: 47px;
       }
+      textarea {
+        width: 100%;
+        height: calc(100% - 141px);
+        border: none;
+        font-size: 14px;
+        padding: 10px;
+        resize: none;
+      }
       input[type="submit"] {
         float: left;
-        height: 100%;
+        height: 47px;
         width: 100%;
-        font-size: 35px;
+        font-size: 17px; // 35px;
         color: #fff;
         border: none;
         background-color: rgba(0, 136, 255, 0.6);
         box-sizing: border-box;
         transition: all .2s;
       }
-      .submit:hover {
-        color: rgba(0, 100, 0, 0.6);
-        background-color: #fff;
+      input[type="submit"]:hover {
+        background-color: rgba(0, 136, 255, .4);
         cursor: pointer;
       }
     }
